--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,17 +5,40 @@ const today = new Date();
 <footer>
 	&copy; {today.getFullYear()}, Tom Marcheron. Tous droits réservés.
 	<div class="social-links">
-			<a href="https://linkedin.com/in/tom-marcheron-35b087357" target="_blank" aria-label="LinkedIn">
-				<svg viewBox="0 0 24 24" aria-hidden="true" width="32" height="32" fill="currentColor">
-					<path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z"></path>
-				</svg>
-			</a>
+		<a
+			href="https://linkedin.com/in/tom-marcheron-35b087357"
+			target="_blank"
+			aria-label="LinkedIn"
+		>
+			<svg
+				viewBox="0 0 24 24"
+				aria-hidden="true"
+				width="32"
+				height="32"
+				fill="currentColor"
+			>
+				<path
+					d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z"
+				></path>
+			</svg>
+		</a>
 
-			<a href="mailto:tom.marcheron@gmail.com" aria-label="Me contacter par Email">
-				<svg viewBox="0 0 24 24" aria-hidden="true" width="32" height="32" fill="currentColor">
-					<path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"></path>
-				</svg>
-			</a>
+		<a
+			href="mailto:tom.marcheron@gmail.com"
+			aria-label="Me contacter par Email"
+		>
+			<svg
+				viewBox="0 0 24 24"
+				aria-hidden="true"
+				width="32"
+				height="32"
+				fill="currentColor"
+			>
+				<path
+					d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
+				></path>
+			</svg>
+		</a>
 	</div>
 </footer>
 <style>
